<resources>
    <string name="app_name">ScrollingApp</string>
    <string name="qbertText">"Qbert: Gottlieb 1982"</string>
    <string name="action_settings">Settings</string>
    <string name="tronimg">tronImg</string>
    <string name="invadersimg">invadersImg</string>
    <string name="jumpbugimg">jumpBugImg</string>
    <string name="madplanetsimg">madPlanetsImg</string>
    <string name="nibblerimg">nibblerImg</string>
    <string name="qbertimg">qbertImg</string>
    <string name="cosmicalienimg">cosmicAlienImg</string>
</resources>